# vmprotect-sdk

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: vmprotect_sdkConfig.cmake.in
example/: CMakeLists.txt  main.cpp
include/: VMProtectSDK.h
source/: VMProtectSDK.c  VMProtectSDK.cpp
